--- a/test_setting.ini
+++ b/test_setting.ini
@@ -1,6 +1,6 @@
 timezone = 9
 
-voicechannel = 
+voicechannel = 701793060786536624
 textchannel = 701793060786536623
 ladderchannel = 
 jungsanchannel = 
