--- a/test_setting.ini
+++ b/test_setting.ini
@@ -1,6 +1,6 @@
 timezone = 9
 
-voicechannel = 
+voicechannel = 705288097486602302
 textchannel = 705312094949474356
 ladderchannel = 
 jungsanchannel = 
