--- a/test_setting.ini
+++ b/test_setting.ini
@@ -1,6 +1,6 @@
 timezone = 9
 
-voicechannel = 
+voicechannel = 695931128011423748
 textchannel = 705317217562263573
 ladderchannel = 
 jungsanchannel = 
