--- a/boss.ini
+++ b/boss.ini
@@ -894,37 +894,37 @@ nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
-bossname = 1리비아1
+bossname = 1리지아1
 gentime = 11:00
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
-bossname = 1리비아2
+bossname = 1리지아2
 gentime = 11:00
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
-bossname = 2리비아1
+bossname = 2리지아1
 gentime = 11:00
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
-bossname = 2리비아2
+bossname = 2리지아2
 gentime = 11:00
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
-bossname = 3리비아1
+bossname = 3리지아1
 gentime = 11:00
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
-bossname = 3리비아2
+bossname = 3리지아2
 gentime = 11:00
 nogencheck = 0
 before_alert_ment = 입니다
