--- a/boss.ini
+++ b/boss.ini
@@ -715,19 +715,19 @@ before_alert_ment = 입니다
 alert_ment = 입니다. 어여오세요
 
 bossname = 1에라트
-gentime = 09:00
+gentime = 24:00
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 입니다. 어여오세요
 
 bossname = 1바눌린
-gentime = 09:00
+gentime = 10:00
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 입니다. 어여오세요
 
 bossname = 1파스빌
-gentime = 09:00
+gentime = 10:00
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
@@ -757,7 +757,7 @@ before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
 bossname = 1세티벨
-gentime = 08:00
+gentime = 10:00
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
@@ -781,7 +781,7 @@ before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
 bossname = 1델락
-gentime = 11:00
+gentime = 10:00
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
@@ -894,37 +894,37 @@ nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
-bossname = 1리지아1
+bossname = 1리비아1
 gentime = 11:00
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
-bossname = 1리지아2
+bossname = 1리비아2
 gentime = 11:00
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
-bossname = 2리지아1
+bossname = 2리비아1
 gentime = 11:00
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
-bossname = 2리지아2
+bossname = 2리비아2
 gentime = 11:00
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
-bossname = 3리지아1
+bossname = 3리비아1
 gentime = 11:00
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
-bossname = 3리지아2
+bossname = 3리비아2
 gentime = 11:00
 nogencheck = 0
 before_alert_ment = 입니다
@@ -1075,37 +1075,37 @@ before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
 bossname = 1팬서
-gentime = 09:00
+gentime = 14:00
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
 bossname = 2팬서
-gentime = 09:00
+gentime = 14:00
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
 bossname = 3팬서
-gentime = 09:00
+gentime = 14:00
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
 bossname = 1오르카
-gentime = 09:00
+gentime = 14:00
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
 bossname = 2오르카
-gentime = 09:00
+gentime = 14:00
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
 bossname = 3오르카
-gentime = 09:00
+gentime = 14:00
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
@@ -1147,19 +1147,19 @@ before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
 bossname = 두크라스
-gentime = 08:00
+gentime = 10:00
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
 bossname = 지프나크
-gentime = 09:00
+gentime = 10:00
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
 bossname = 카타스랄
-gentime = 09:00
+gentime = 10:00
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
@@ -1211,3 +1211,70 @@ gentime = 08:10
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
+
+bossname = 1델파나
+gentime = 12:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 탐 입니다. 어여오세요
+
+bossname = 2델파나
+gentime = 12:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 탐 입니다. 어여오세요
+
+bossname = 3델파나
+gentime = 12:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 탐 입니다. 어여오세요
+
+bossname = 테라핌
+gentime = 12:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 탐 입니다. 어여오세요
+
+bossname = 키리코
+gentime = 12:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 탐 입니다. 어여오세요
+
+bossname = 로크만1
+gentime = 12:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 탐 입니다. 어여오세요
+
+bossname = 로크만2
+gentime = 12:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 탐 입니다. 어여오세요
+
+bossname = 셀피나
+gentime = 12:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 탐 입니다. 어여오세요
+
+bossname = 하누스
+gentime = 12:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 탐 입니다. 어여오세요
+
+bossname = 라키바
+gentime = 12:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 탐 입니다. 어여오세요
+
+bossname = 몬토
+gentime = 12:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 탐 입니다. 어여오세요
+
