--- a/boss.ini
+++ b/boss.ini
@@ -679,43 +679,43 @@ before_alert_ment = 입니다
 alert_ment = 입니다. 어여오세요
 
 bossname = 1누크레스
-gentime = 08:00
+gentime = 05:00
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 입니다. 어여오세요
 
 bossname = 1파모비
-gentime = 08:00
+gentime = 05:00
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 입니다. 어여오세요
 
 bossname = 1쥬브
-gentime = 08:00
+gentime = 05:00
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 입니다. 어여오세요
 
 bossname = 1게본
-gentime = 08:00
+gentime = 05:00
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 입니다. 어여오세요
 
 bossname = 1뮬라크
-gentime = 09:00
+gentime = 06:00
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 입니다. 어여오세요
 
 bossname = 1아즈타
-gentime = 09:00
+gentime = 06:00
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 입니다. 어여오세요
 
 bossname = 1에라트
-gentime = 12:00
+gentime = 06:00
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 입니다. 어여오세요
@@ -733,25 +733,25 @@ before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
 bossname = 1카무반
-gentime = 10:00
+gentime = 07:00
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
 bossname = 1라모라보
-gentime = 10:00
+gentime = 07:00
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
 bossname = 1가트마
-gentime = 10:00
+gentime = 07:00
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
 bossname = 1갈로프
-gentime = 11:00
+gentime = 08:00
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
@@ -763,19 +763,19 @@ before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
 bossname = 1람돈
-gentime = 11:00
+gentime = 08:00
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
 bossname = 1플라온
-gentime = 11:00
+gentime = 08:00
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
 bossname = 1제낙스
-gentime = 11:00
+gentime = 08:00
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
@@ -859,109 +859,109 @@ before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
 bossname = 1아트1
-gentime = 12:00
+gentime = 10:00
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
 bossname = 1아트2
-gentime = 12:00
+gentime = 10:00
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
 bossname = 2아트1
-gentime = 12:00
+gentime = 10:00
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
 bossname = 2아트2
-gentime = 12:00
+gentime = 10:00
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
 bossname = 3아트1
-gentime = 12:00
+gentime = 10:00
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
 bossname = 3아트2
-gentime = 12:00
+gentime = 10:00
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
-bossname = 1리비아1
-gentime = 11:00
+bossname = 1리지아1
+gentime = 10:00
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
-bossname = 1리비아2
-gentime = 11:00
+bossname = 1리지아2
+gentime = 10:00
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
-bossname = 2리비아1
-gentime = 11:00
+bossname = 2리지아1
+gentime = 10:00
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
-bossname = 2리비아2
-gentime = 11:00
+bossname = 2리지아2
+gentime = 10:00
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
-bossname = 3리비아1
-gentime = 11:00
+bossname = 3리지아1
+gentime = 10:00
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
-bossname = 3리비아2
-gentime = 11:00
+bossname = 3리지아2
+gentime = 10:00
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
 bossname = 1트루삭1
-gentime = 12:00
+gentime = 10:00
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
 bossname = 1트루삭2
-gentime = 12:00
+gentime = 10:00
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
 bossname = 2트루삭1
-gentime = 12:00
+gentime = 10:00
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
 bossname = 2트루삭2
-gentime = 12:00
+gentime = 10:00
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
 bossname = 3트루삭1
-gentime = 12:00
+gentime = 10:00
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
 bossname = 3트루삭2
-gentime = 12:00
+gentime = 10:00
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
@@ -973,103 +973,103 @@ before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
 bossname = 1브로아2
-gentime = 13:00
+gentime = 12:00
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
 bossname = 2브로아1
-gentime = 13:00
+gentime = 12:00
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
 bossname = 2브로아2
-gentime = 13:00
+gentime = 12:00
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
 bossname = 3브로아1
-gentime = 13:00
+gentime = 12:00
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
 bossname = 3브로아2
-gentime = 13:00
+gentime = 12:00
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
 bossname = 1비어디1
-gentime = 13:00
+gentime = 12:00
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
 bossname = 1비어디2
-gentime = 13:00
+gentime = 12:00
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
 bossname = 2비어디1
-gentime = 13:00
+gentime = 12:00
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
 bossname = 2비어디2
-gentime = 13:00
+gentime = 12:00
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
 bossname = 3비어디1
-gentime = 13:00
+gentime = 12:00
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
 bossname = 3비어디2
-gentime = 13:00
+gentime = 12:00
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
 bossname = 1베일드1
-gentime = 13:00
+gentime = 12:00
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
 bossname = 1베일드2
-gentime = 13:00
+gentime = 12:00
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
 bossname = 2베일드1
-gentime = 13:00
+gentime = 12:00
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
 bossname = 2베일드2
-gentime = 13:00
+gentime = 12:00
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
 bossname = 3베일드1
-gentime = 13:00
+gentime = 12:00
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
 bossname = 3베일드2
-gentime = 13:00
+gentime = 12:00
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
@@ -1147,19 +1147,19 @@ before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
 bossname = 두크라스
-gentime = 10:00
+gentime = 12:00
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
 bossname = 지프나크
-gentime = 10:00
+gentime = 12:00
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
 bossname = 카타스랄
-gentime = 10:00
+gentime = 12:00
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
@@ -1278,3 +1278,8 @@ nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
+bossname = 베딘
+gentime = 12:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 탐 입니다. 어여오세요
