--- a/test_setting.ini
+++ b/test_setting.ini
@@ -1,7 +1,7 @@
 timezone = 9
 
-voicechannel = 695931128011423748
-textchannel = 705317217562263573
+voicechannel = 
+textchannel = 
 ladderchannel = 
 jungsanchannel = 
 killchannel = 
@@ -22,3 +22,5 @@ jsonname =
 sheetname = 
 inputcell = 
 outputcell = 
+
+voiceType = 3680007
